--- a/package.json
+++ b/package.json
@@ -34,11 +34,12 @@
     "@testing-library/user-event": "^14.4.3",
     "@types/crypto-js": "^4.1.1",
     "@types/jest": "^28.1.8",
+    "@types/node": "^20.3.3",
     "@types/react": "^18.0.18",
     "@types/react-dom": "^18.0.6",
     "@types/uuid": "^8.3.4",
     "@vitejs/plugin-react": "^2.0.1",
-    "jest": "^29.0.1",
+    "jest": "^28.0.0",
     "ts-jest": "^28.0.8",
     "typescript": "^4.8.2",
     "vite": "^3.0.9"
